--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,6 @@ body{
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-template-rows: auto;
-    column-gap: 2em;
-    row-gap: 2em;
     justify-content: center;
 
 }
@@ -26,34 +24,56 @@ body{
     background-color: white;
     width: 100%;
     padding: 10px;
+    box-sizing: border-box;
     margin-bottom: 1em;
     grid-column: 1 / -1;
 }
 
 .numbers{
     display: grid;
-    grid-template-columns: auto auto auto;
-    column-gap: 2em;
-    row-gap: 2em;
+    grid-template-columns: repeat(3, auto);
     grid-template-rows: auto;
 }
 
-.buttons-container{
-    background-color: white;
-    width: auto;
-    max-height: fit-content;
-    max-width: fit-content;
-    border-radius: 10%;
-    border: white solid;
-}
 
 .clear-back-container{
     display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
+    grid-template-rows: repeat(2, auto);
+    height: inherits;
+    max-height: fit-content;
 }
 .operations-container{
     display: grid;
-    row-gap: 0.5em;
+    height: inherit;
+    max-height: fit-content;
+    grid-template-rows: repeat(4, auto)
 }
 
+#equals{
+    grid-column: span 2;
+    text-align: center;
+    width: 100%;
+}
+.numbers button{
+    color: rgba(255, 0, 0, 1);
+    background-color: rgba(255, 0, 0, 0.3);
+    border: rgba(255, 0, 0, 1) solid;
+    border-radius: 25% 15%;
+    width: 8em;
+    height: 6em;
+}
+
+.numbers button:hover{
+    color: white;
+}
+
+.numbers button:active{
+    background-color: white;
+}
+
+.operations-container button{
+    background-color: rgba(41, 74, 240, 0.89);
+    width: 6em;
+    height: 6em;
+    border-radius: 10%;
+}
