--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body{
 #menu{
     background-color: white;
     width: 100%;
+    max-height: 100%;
     padding: 10px;
     box-sizing: border-box;
     margin-bottom: 1em;
