--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,13 @@
 body{
     background-color: black;
-
     display: flex;
-
     flex-direction: column;
-
     justify-content: center;
-  
     align-items: center;
-  
     height: 100vh;
     width: 100vw;
 }
-.container{
+.buttons{
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-template-rows: auto;
